--- a/ja/index.org
+++ b/ja/index.org
@@ -27,7 +27,7 @@
 
 開発版は、以下の手段で入手できます。（[[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]）
 
-=~$ git clone git://orgmode.org/org-mode.git=
+=~$ git clone git://orgmode.org/org-mode.git= (http://orgmode.org/org-mode.git も有効です)
 
 =M-x list-packages RET= ([[http://orgmode.org/elpa.html][Org ELPA（英語）]]を読んでください）
 
