--- a/index.org
+++ b/index.org
@@ -24,22 +24,28 @@ projects, and authoring documents with a fast and effective plain-text system.<b
 #+ATTR_HTML: :id main-image
 [[file:img/main.jpg]]
 
-** Stable
-
 The stable version of Org is *8.3.6*, as of Sept. 2016.  See the [[file:Changes.org][release notes]].
 
-You can download it as a [[http://orgmode.org/org-8.3.6.tar.gz][tar.gz]] or [[http://orgmode.org/org-8.3.6.zip][zip]] archive.
+Get it with =M-x package-install RET org RET= (see [[http://orgmode.org/elpa.html][Org ELPA]]).
 
-Or =M-x package-install RET org RET= (see [[http://orgmode.org/elpa.html][Org ELPA]]).
+Or download it as a [[http://orgmode.org/org-8.3.6.tar.gz][tar.gz]] or [[http://orgmode.org/org-8.3.6.zip][zip]] archive.
 
-** Development
-
-You can browse the development version from [[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]:
+You can also browse the development version from [[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]:
 
 =~$ git clone git://orgmode.org/org-mode.git= (or)
 =~$ git clone http://orgmode.org/org-mode.git=
 
-You can download the [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://orgmode.org/org-latest.zip][zip]] archives of daily snapshots.
+You can download the [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://orgmode.org/org-latest.zip][zip]] daily snapshots.
+
+- [[file:features.org][List of features]]
+- [[#docs][Manuals and tutorials]]
+- [[http://orgmode.org/worg/org-contribute.html][How to contribute to Org?]]
+- [[file:community.org][Mailing list and goodies]]
+- [[http://orgmode.org/worg/][Worg: community-written docs]]
+- [[file:talks.org][Talks about Org mode]]
+- [[http://orgmode.org/worg/org-tools/index.html][Org tools (outside Emacs)]]
+- [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]
+- [[http://orgmode.org/org.html#History-and-Acknowledgments][History and acknowledgements]]
 
 ** More
 
@@ -55,21 +61,6 @@ bleeding edge]].
    :END:
 
 {{{next(links)}}}
-
-* Useful links
-  :PROPERTIES:
-  :CUSTOM_ID: links
-  :END:
-
-- [[file:features.org][List of features]]
-- [[#docs][Manuals and tutorials]]
-- [[http://orgmode.org/worg/org-contribute.html][How to contribute to Org?]]
-- [[file:community.org][Mailing list and goodies]]
-- [[http://orgmode.org/worg/][Worg: community-written docs]]
-- [[file:talks.org][Talks about Org mode]]
-- [[http://orgmode.org/worg/org-tools/index.html][Org tools (outside Emacs)]]
-- [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]
-- [[http://orgmode.org/org.html#History-and-Acknowledgments][History and acknowledgements]]
 
 ** Move
    :PROPERTIES:
