--- a/index.org
+++ b/index.org
@@ -32,10 +32,13 @@ Or download it as a [[http://orgmode.org/org-8.3.6.tar.gz][tar.gz]] or [[http://
 
 You can also browse the development version from [[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]:
 
-=~$ git clone git://orgmode.org/org-mode.git= (or)
+=~$ git clone git://orgmode.org/org-mode.git=
+
+or
+
 =~$ git clone http://orgmode.org/org-mode.git=
 
-You can download the [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://orgmode.org/org-latest.zip][zip]] daily snapshots.
+You can also download the [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://orgmode.org/org-latest.zip][zip]] daily snapshots.
 
 - [[file:features.org][List of features]]
 - [[#docs][Manuals and tutorials]]
