--- a/fr/index.org
+++ b/fr/index.org
@@ -17,7 +17,7 @@ documents, le tout en texte brut.<br />
 <span id="top2">Créé en 2003 par <a target="new" href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a>, maintenu par <a target="new" href="http://bzg.fr">Bastien Guerry</a>.</span></em></p></div>
 #+END_HTML
 
-* Télécharger et installer
+* Installation
   :PROPERTIES:
   :CUSTOM_ID: intro
   :END:
@@ -25,15 +25,18 @@ documents, le tout en texte brut.<br />
 #+ATTR_HTML: :id main-image
 [[file:../img/main.jpg]]
 
-Version stable *8.3.6* (Sept. 2016) --- [[http://orgmode.org/org-8.3.6.tar.gz][tar.gz]] ou [[http://orgmode.org/org-8.3.6.zip][zip]] ([[file:../Changes.org][derniers changements]]).
+La version stable est la *8.3.6*, sept. 2016.  Voir les ([[file:~/install/git/orgweb/Changes.org][changements]]).
 
-=M-x list-packages RET= (voir [[http://orgmode.org/elpa.html][Org ELPA]])
+Installez avec =M-x package-install RET org RET= (voir [[http://orgmode.org/elpa.html][Org ELPA]]).
 
-Version de développement ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
+Ou téléchargez les archives [[http://orgmode.org/org-8.3.6.tar.gz][tar.gz]] ou [[http://orgmode.org/org-8.3.6.zip][zip]].
 
-=~$ git clone git://orgmode.org/org-mode.git= (ou http://orgmode.org/org-mode.git)
+Vous pouvez parcourir la version en développement sur [[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]] ou cloner
+les dépôts :
 
-Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou [[http://orgmode.org/org-latest.zip][zip]]
+=~$ git clone git://orgmode.org/org-mode.git= (http:// fonctionne aussi)
+
+Versions de développement quotidiennes : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou [[http://orgmode.org/org-latest.zip][zip]]
 
 - [[file:features.org][Liste des fonctionnalités]]
 - [[#docs][Manuels et tutoriels]]
