--- a/fr/index.org
+++ b/fr/index.org
@@ -34,7 +34,7 @@ Ou téléchargez les archives [[http://orgmode.org/org-8.3.6.tar.gz][tar.gz]] ou
 Vous pouvez parcourir la version en développement sur [[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]] ou cloner
 les dépôts :
 
-=~$ git clone git://orgmode.org/org-mode.git= (http:// fonctionne aussi)
+=~$ git clone git://orgmode.org/org-mode.git= (=http= fonctionne aussi)
 
 Versions de développement quotidiennes : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou [[http://orgmode.org/org-latest.zip][zip]]
 
