--- a/ja/index.org
+++ b/ja/index.org
@@ -9,11 +9,11 @@
 #+MACRO: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">download and install</a></div>#+END_HTML
 #+HTML_HEAD:     <link rel="stylesheet" href="../org.css" type="text/css" />
 
-#+BEGIN_HTML
+#+BEGIN_EXPORT HTML
 <div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。<br />
 
 <span id="top2">Org-modeは2003年に<a target="new" href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a>氏によって作られ、2011年から<a target="new" href="http://bzg.fr">Bastien Guerry</a>氏によって管理されています。</span></em></p></div>
-#+END_HTML
+#+END_EXPORT
 
 * ダウンロードとインストール
   :PROPERTIES:
