--- a/fr/index.org
+++ b/fr/index.org
@@ -9,13 +9,13 @@
 #+MACRO: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">installation</a></div>
 #+HTML_HEAD:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
-#+BEGIN_HTML
+#+BEGIN_EXPORT HTML
 <div id="top"><p><em>Org mode permet de prendre des notes,
 de maintenir des listes TODO, de planifier des projets et de publier des
 documents, le tout en texte brut.<br />
 
 <span id="top2">Créé en 2003 par <a target="new" href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a>, maintenu par <a target="new" href="http://bzg.fr">Bastien Guerry</a>.</span></em></p></div>
-#+END_HTML
+#+END_EXPORT
 
 * Installation
   :PROPERTIES:
