--- a/fr/talks.org
+++ b/fr/talks.org
@@ -9,19 +9,19 @@
 #+MACRO: updown #+HTML: <div class="move"><< <a onclick="goToByScroll('$1');return false;" href="#">$1</a><br /><br />>> <a onclick="goToByScroll('$2');return false;" href="#">$2</a></div>
 #+HTML_HEAD:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
-#+BEGIN_HTML
+#+BEGIN_EXPORT HTML
 <div id="top"><p><em>Org mode permet de prendre des notes, de maintenir des listes TODO, de
 planifier des projets et de publier des documents, le tout en texte brut.</em></p></div>
-#+END_HTML
+#+END_EXPORT
 
 * GoogleTech Talk par Carsten Dominik (2008)
   :PROPERTIES:
   :ID:       google-tech-talk
   :END:
 
-#+begin_html
+#+begin_export html
 <iframe class="iframe" width="420" height="315" src="http://www.youtube.com/embed/oJTwQvgfgMM" frameborder="0" allowfullscreen></iframe>
-#+end_html
+#+end_export
 
 Voici la vidéo du [[http://www.youtube.com/user/GoogleTechTalks][Google Tech Talk]] que j'ai donné le 15 juillet 2008 sur le
 campus de Google à Mountain View, California.
@@ -44,9 +44,9 @@ présentation.
   :ID:       org-pour-scientifiques
   :END:
 
-#+begin_html
+#+begin_export html
 <iframe class="iframe" src="http://player.vimeo.com/video/33725204?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="402" height="302" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-#+end_html
+#+end_export
 
 Cette présentation a eu lieu le 8 février 2010 au Max Planck Institute pour
 la Recherche Neurologique à Cologne, en Allemagne (http://nf.mpg.de).  Voir
@@ -65,9 +65,9 @@ la Recherche Neurologique à Cologne, en Allemagne (http://nf.mpg.de).  Voir
   :ID:       floss-weekly
   :END:
 
-#+begin_html
+#+begin_export html
 <iframe class="iframe" src="http://twit.tv/embed/8239" width="480" height="320" scrolling="no" marginwidth="0" marginheight="0" hspace="0" align="middle" frameborder="0"></iframe>
-#+end_html
+#+end_export
 
 ** Move
    :PROPERTIES:
@@ -82,9 +82,9 @@ la Recherche Neurologique à Cologne, en Allemagne (http://nf.mpg.de).  Voir
   :ID:       ghm2011
   :END:
 
-#+begin_html
+#+begin_export html
 <iframe class="iframe" src="http://player.vimeo.com/video/30721952?title=0&amp;byline=0&amp;portrait=0" width="480" height="354" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-#+end_html
+#+end_export
 
 Cette présentation fut donnée pendant le GNU Hackers Meeting de Paris
 en 2011.
@@ -107,9 +107,9 @@ présentation.
   :ID:       gpn12
   :END:
 
-#+begin_html
+#+begin_export html
 <iframe width="420" height="315" src="http://www.youtube.com/embed/mUSoo4UaKBo" frameborder="0" allowfullscreen></iframe>
-#+end_html
+#+end_export
 
 Le diapomara est téléchargeable [[http://florian.adamsky.it/research/talks/gpn12/GPN12-Emacs-Org-mode.pdf][en PDF ici]].
 
