--- a/ja/talks.org
+++ b/ja/talks.org
@@ -9,18 +9,18 @@
 #+MACRO: updown #+HTML: <div class="move"><< <a onclick="goToByScroll('$1');return false;" href="#">$1</a><br /><br />>> <a onclick="goToByScroll('$2');return false;" href="#">$2</a></div>
 #+HTML_HEAD:     <link rel="stylesheet" href="../org.css" type="text/css" />
 
-#+BEGIN_HTML
+#+BEGIN_EXPORT
 <div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。</em></p></div>
-#+END_HTML
+#+END_EXPORT
 
 * Carsten Dominik 氏による GoogleTech Talk の講演 (2008)
   :PROPERTIES:
   :ID:       google-tech-talk
   :END:
 
-#+begin_html
+#+begin_export
 <iframe class="iframe" width="420" height="315" src="http://www.youtube.com/embed/oJTwQvgfgMM" frameborder="0" allowfullscreen></iframe>
-#+end_html
+#+end_export
 
 [[http://research.google.com/video.html][Google Tech Talk]] で Carsten Dominik 氏が、org-mode について講演したときの映像です。2008年7月15日に、カリフォルニア州マウンテンビューにあるグーグルキャンパスで行われました。
 
@@ -42,9 +42,9 @@ Carsten Dominik 氏は、[[http://emacspeak.sourceforge.net/raman/][T.V. Raman]]
   :ID:       org-for-scientists
   :END:
 
-#+begin_html
+#+begin_export
 <iframe class="iframe" src="http://player.vimeo.com/video/33725204?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=0" width="402" height="302" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-#+end_html
+#+end_export
 
 この講演は、2010年2月8日に the Max Planck Institute for Neurological Research in Cologne, Germany (http://nf.mpg.de) で行われました。詳細は[[http://www.nf.mpg.de/orgmode/guest-talk-dominik.html][こちら]]のページをチェックしてください。
 
@@ -62,9 +62,9 @@ Carsten Dominik 氏は、[[http://emacspeak.sourceforge.net/raman/][T.V. Raman]]
   :ID:       floss-weekly
   :END:
 
-#+begin_html
+#+begin_export
 <iframe class="iframe" src="http://twit.tv/embed/8239" width="480" height="320" scrolling="no" marginwidth="0" marginheight="0" hspace="0" align="middle" frameborder="0"></iframe>
-#+end_html
+#+end_export
 
 
 
@@ -82,9 +82,9 @@ Carsten Dominik 氏は、[[http://emacspeak.sourceforge.net/raman/][T.V. Raman]]
   :ID:       ghm2011
   :END:
 
-#+begin_html
+#+begin_export
 <iframe class="iframe" src="http://player.vimeo.com/video/30721952?title=0&amp;byline=0&amp;portrait=0" width="480" height="354" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-#+end_html
+#+end_export
 
 このプレゼンテーションは、2012年にパリで開催されたGNUハッカーズミーティングで行われました。
 
@@ -105,9 +105,9 @@ Bastien氏をこのミーティングに招待したLudovic Courtès氏と、ミ
   :ID:       gpn12
   :END:
 
-#+begin_html
+#+begin_export
 <iframe width="420" height="315" src="http://www.youtube.com/embed/mUSoo4UaKBo" frameborder="0" allowfullscreen></iframe>
-#+end_html
+#+end_export
 
 The slides are available [[http://florian.adamsky.it/research/talks/gpn12/GPN12-Emacs-Org-mode.pdf][as PDF here]].
 
