--- a/fr/index.org
+++ b/fr/index.org
@@ -47,6 +47,8 @@ Versions de développement quotidiennes : [[http://orgmode.org/org-latest.tar.gz
 - [[http://orgmode.org/fr/community.html#gsoc][Google Summer of Code 2012]]
 - [[file:community.org][Liste de discussion et « goodies »]]
 
+Le mimetype //de facto// pour les pièces jointes en =.org= est =text/x-org=.
+
 ** More
 
 Plus sur [[http://orgmode.org/worg/dev/org-build-system.html][l'installation d'Org mode]] (Worg)
