--- a/ja/index.org
+++ b/ja/index.org
@@ -44,7 +44,7 @@
 - [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]（英語）
 - [[file:community.org][メーリングリストとグッズ]]
 
-The //de facto// mimetype for org attachments is =text/x-org=.
+The //de facto// mimetype for org attachments is =text/org=.
 
 ** より詳しい情報
 
