--- a/fr/features.org
+++ b/fr/features.org
@@ -1,17 +1,17 @@
-#+TITLE:     Org mode for Emacs -- Fonctionnalités
-#+EMAIL:     carsten at orgmode dot org
-#+LANGUAGE:  en
-#+STARTUP:   hidestars
-#+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
-#+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+MACRO: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
-#+HTML_HEAD:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
+#+title:     Org mode for Emacs -- Fonctionnalités
+#+email:     carsten at orgmode dot org
+#+language:  en
+#+startup:   hidestars
+#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
+#+keywords:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
+#+description: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+macro: updown #+HTML: <div class="move"><a onclick="goToByScroll('$1');return false;" href="#">< $1</a> · <a onclick="goToByScroll('$2');return false;" href="#">$2 ></a></div>
+#+html_head:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
-#+BEGIN_HTML
+#+begin_export html
 <div id="top"><p><em>Org mode permet de prendre des notes, de maintenir des listes TODO, de
 planifier des projets et de publier des documents, le tout en texte brut.</em></p></div>
-#+END_HTML
+#+end_export
 
 * Edition
   :PROPERTIES:
