--- a/index.org
+++ b/index.org
@@ -1,21 +1,21 @@
 #+title:     Org mode for Emacs -- Your Life in Plain Text
 #+email:     carsten at orgmode dot org
 #+language:  en
-#+STARTUP:   hidestars
-#+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
-#+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+MACRO: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
-#+MACRO: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">download and install</a></div>
-#+HTML_HEAD: <link rel="stylesheet" href="org.css" type="text/css" />
+#+startup:   hidestars
+#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
+#+keywords:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
+#+description: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+macro: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
+#+macro: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">download and install</a></div>
+#+html_head: <link rel="stylesheet" href="org.css" type="text/css" />
 #+html_head: <meta name="flattr:id" content="8wyy6v">
 
-#+BEGIN_EXPORT HTML
+#+begin_export html
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
 projects, and authoring documents with a fast and effective plain-text system.<br />
 
 <span id="top2">Created by <a target="new" href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a> in 2003, maintained by <a target="new" href="http://bzg.fr">Bastien Guerry</a> and developed by <a href="http://orgmode.org/org.html#History-and-Acknowledgments">many others</a>.</span></em></p></div>
-#+END_EXPORT
+#+end_export
 
 * Installation
   :PROPERTIES:
