--- a/fr/index.org
+++ b/fr/index.org
@@ -1,20 +1,20 @@
-#+TITLE:     Org mode for Emacs -- Votre vie en texte brut
-#+EMAIL:     carsten at orgmode dot org
-#+LANGUAGE:  en
-#+STARTUP:   hidestars
-#+OPTIONS:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
-#+KEYWORDS:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
-#+DESCRIPTION: Org: an Emacs Mode for Notes, Planning, and Authoring
-#+MACRO: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
-#+MACRO: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">installation</a></div>
-#+HTML_HEAD:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
+#+title:     Org mode for Emacs -- Votre vie en texte brut
+#+email:     carsten at orgmode dot org
+#+language:  en
+#+startup:   hidestars
+#+options:   H:3 num:nil toc:nil \n:nil @:t ::t |:t ^:t *:t TeX:t author:nil <:t LaTeX:t
+#+keywords:  Org Emacs outline planning note authoring project plain-text LaTeX HTML
+#+description: Org: an Emacs Mode for Notes, Planning, and Authoring
+#+macro: next #+HTML: <div class="move">> <a onclick="goToByScroll('$1');return false;" href="#">documentation</a></div>
+#+macro: previous #+HTML: <div class="move">< <a onclick="goToByScroll('$1');return false;" href="#">installation</a></div>
+#+html_head:     <link rel="stylesheet" href="http://orgmode.org/org.css" type="text/css" />
 
-#+BEGIN_EXPORT HTML
+#+begin_export html
 <div id="top"><p><em>Org mode permet de prendre des notes,
 de maintenir des listes TODO, de planifier des projets et de publier des documents, le tout en texte brut.<br />
 
 <span id="top2">Créé en 2003 par <a target="new" href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a>, maintenu par <a target="new" href="http://bzg.fr">Bastien Guerry</a>.</span></em></p></div>
-#+END_EXPORT
+#+end_export
 
 * Installation
   :PROPERTIES:
