--- a/todo.org
+++ b/todo.org
@@ -1,18 +1,18 @@
-#+TITLE:     Org mode for Emacs -- TODO list (obsolete)
-#+EMAIL:     carsten at orgmode dot org
-#+STARTUP:   align hidestars
-#+TYP_TODO:  TODO IDEA WISH QUESTION INCONSISTENCY BUG | DONE DECLINED 
-#+TAGS:      NEW(n)
-#+LANGUAGE:  en
-#+OPTIONS:   H:2 num:t toc:t \n:nil @:t ::t |:t ^:t *:t TeX:t
-#+KEYWORDS:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
-#+DESCRIPTION: Org Org-mode TODO list
-#+HTML_HEAD:     <link rel="stylesheet" href="org.css" type="text/css" />
+#+title:     Org mode for Emacs -- TODO list (obsolete)
+#+email:     carsten at orgmode dot org
+#+startup:   align hidestars
+#+tags:      NEW(n)
+#+typ_todo:  TODO IDEA WISH QUESTION INCONSISTENCY BUG | DONE DECLINED 
+#+language:  en
+#+options:   H:2 num:t toc:t \n:nil @:t ::t |:t ^:t *:t TeX:t
+#+keywords:  Org Org-mode Emacs outline planning note authoring project plain-text LaTeX HTML
+#+description: Org Org-mode TODO list
+#+html_head:     <link rel="stylesheet" href="org.css" type="text/css" />
 
-#+BEGIN_HTML
+#+begin_export html
 <div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
 projects, and authoring documents with a fast and effective plain-text system.</em></p></div>
-#+END_HTML
+#+end_export
 
 * Introduction
 
@@ -29,22 +29,21 @@ know if I forgot to give /you/ credit for something.
 
 ** Nomenclature
    On this page, I am using TODO keywords in the following way:
-   |-----------------+----------------------------------------------------|
-   | *Keyword*       | Intention                                          |
-   |-----------------+----------------------------------------------------|
-   | *TODO*          | A development  that is going to happen, once I have time or once I figure out how to do it. |
-   | *IDEA*          | A new idea, I have not yet decided what if anything I will do about it. |
-   | *WISH*          | A wish, probably voiced by someone on  emacs-orgmode@gnu.org.  This is less than a new idea, more a change in existing behavior. |
-   | *QUESTION*      | A question someone asked, that needs some thinking before it can be answered |
+   |---------------+-------------------------------------------------------------------------------------------------------------------------------------------------|
+   | *Keyword*       | Intention                                                                                                                                       |
+   |---------------+-------------------------------------------------------------------------------------------------------------------------------------------------|
+   | *TODO*          | A development  that is going to happen, once I have time or once I figure out how to do it.                                                     |
+   | *IDEA*          | A new idea, I have not yet decided what if anything I will do about it.                                                                         |
+   | *WISH*          | A wish, probably voiced by someone on  emacs-orgmode@gnu.org.  This is less than a new idea, more a change in existing behavior.                |
+   | *QUESTION*      | A question someone asked, that needs some thinking before it can be answered                                                                    |
    | *DECLINED*      | I have decided not to implement this feature, but I am keeping it in the list so that people can see it, complain, or still try to convince me. |
-   | *INCONSISTENCY* | Some behavior in Org mode that is not as clean and consistent as I would like it to be. |
-   | *BUG*           | This needs to be fixed, as soon as possible.       |
-   | *DONE*          | Well, done is done.                                |
-   | /NEW/           | This is a tag, indicating recently added entries   |
-   |                 | <50>                                               |
-   |-----------------+----------------------------------------------------|
+   | *INCONSISTENCY* | Some behavior in Org mode that is not as clean and consistent as I would like it to be.                                                         |
+   | *BUG*           | This needs to be fixed, as soon as possible.                                                                                                    |
+   | *DONE*          | Well, done is done.                                                                                                                             |
+   | /NEW/           | This is a tag, indicating recently added entries                                                                                                |
+   |               | <50>                                                                                                                                            |
+   |---------------+-------------------------------------------------------------------------------------------------------------------------------------------------|
 
-   
 * Tasks
 
 ** Structure
